# check_bitcoin_price

./: README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
check_bitcoin_price/: __init__.py  plugin.py
tests/: __init__.py  test_plugin.py
