[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "check-bitcoin-price"
version = "1.0.0"
description = "A Nagios plugin to monitor Bitcoin price"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Thomas Vincent", email = "thomasvincent@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]
keywords = ["nagios", "monitoring", "bitcoin", "cryptocurrency", "plugin"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.22.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.scripts]
check_bitcoin_price = "check_bitcoin_price.plugin:main"

[project.urls]
Homepage = "https://github.com/thomasvincent/check_bitcoin_price"
Repository = "https://github.com/thomasvincent/check_bitcoin_price"
Issues = "https://github.com/thomasvincent/check_bitcoin_price/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["check_bitcoin_price*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=check_bitcoin_price --cov-report=term-missing"

[tool.coverage.run]
source = ["check_bitcoin_price"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
